# plldb

./: .envrc  CLAUDE.md  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
docs/requirements/: req_fn_0001.md  req_fn_0002.md  req_fn_0003.md  req_fn_0006.md  req_fn_0007.md  req_fn_0008.md  req_fn_0009.md  req_fn_000x.md
plldb/: __init__.py  cli.py  debugger.py  executor.py  protocol.py  setup.py  websocket_client.py
plldb/bootstrap/: setup.py
plldb/bootstrap/cloudformation/: template.yaml
plldb/bootstrap/cloudformation/lambda_functions/: authorize.py  connect.py  default.py  disconnect.py  restapi.py  websocket_authorize.py  websocket_connect.py  (+1 more)
plldb/cloudformation/: template.yaml
plldb/cloudformation/lambda_functions/: debugger_instrumentation.py  websocket_connect.py  websocket_default.py  websocket_disconnect.py
plldb/cloudformation/layer/: lambda_runtime.py
plldb/util/: cfn.py
test_stack/test_fn_1/: app.py
tests/: conftest.py  test_bootstrap_manager.py  test_cfn.py  test_cli.py  test_cloudformation_template.py  test_debugger.py  test_debugger_instrumentation.py  test_example.py  test_executor.py  test_lambda_runtime.py  test_layer.py  test_websocket_client.py  test_websocket_connect.py  test_websocket_disconnect.py
tests/bootstrap/: test_bootstrap_manager.py  test_cloudformation_template.py  test_layer.py  test_restapi_lambda.py  test_setup.py  test_websocket_authorize.py  test_websocket_connect.py  test_websocket_disconnect.py
tests/core/: test_rest_client.py  test_stack_discovery.py  test_websocket_client.py
