[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
plldb = "plldb.cli:cli"

[project]
name = "plldb"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "boto3>=1.38.23",
    "click>=8.2.1",
]

[tool.hatch.build.targets.wheel]
packages = ["plldb"]

[tool.uv]
dev-dependencies = [
    "moto<5.1.0",
    "pyright>=1.1.401",
    "pytest>=8.3.5",
    "ruff>=0.11.11",
]

[tool.pyright]
include = ["plldb"]
venvPath = "."
venv = ".venv"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = []

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.pytest.ini_options]
filterwarnings = [
    'ignore:datetime\.datetime\.utcnow\(\) is deprecated:DeprecationWarning'
]